Smart Integration: prevent text overlapping when ai-flag validator is enabled

--- a/gui/admin-gui/src/frontend/scss/smart-int.scss
+++ b/gui/admin-gui/src/frontend/scss/smart-int.scss
@@ -100,19 +100,10 @@
   background-color: #{$secondary-light} !important;
 }
 
-.bg-primary-light {
-  background-color: #{$primary-light} !important;
-}
-
 .alert.purple-light-alert {
   --label-color: #{$purple-light};
   background-color: var(--label-color);
   border-color: #{$purple};
-}
-
-.alert-info-light {
-  background-color: #{$info-light};   /* light blue background */
-  border-color: #{$info};
 }
 
 /* AI Suggestion badge */
